# price-calculator

./: .gitignore  CMakeLists.txt  install_requirements.sh
libs/http/: httplib.h
src/: headers.h  main.cpp
src/models/AccountInfo/: AccountInfo.cpp  AccountInfo.h
src/models/accountInfo/: AccountInfo.cpp  AccountInfo.h
src/models/asset/: Asset.cpp  Asset.h
src/models/markPrice/: MarkPrice.cpp  MarkPrice.h
src/models/position/: Position.cpp  Position.h
src/models/tickerPrice/: TickerPrice.cpp  TickerPrice.h
src/services/: PriceService.cpp  PriceService.h
src/services/binanceService/: BinanceService.cpp  BinanceService.h
src/services/priceService/: PriceService.cpp  PriceService.h
src/services/redisService/: RedisService.cpp  RedisService.h
src/services/restAPIService/: BinanceAPIService.cpp  BinanceAPIService.h
src/services/streamService/: BinanceStreamService.cpp  BinanceStreamService.h
src/services/wsPriceStream/: PriceWs.cpp  PriceWs.h  root_certificates.hpp
src/services/wsServer/: Session.cpp  Session.h  SocketServer.cpp  SocketServer.h
src/utils/: DataUtils.cpp  DataUtils.h
src/utils/logger/: Logger.cpp  Logger.h  LoggerFailer.cpp  LoggerFailer.h
